# redice

./: Cargo.toml
crates/connection/: Cargo.toml
crates/connection/src/: connection_dialog.rs  connection_panel.rs  lib.rs  main_content.rs
crates/connection/src/connection_dialog/: render_advanced_tab.rs  render_db_aliases_tab.rs  render_general_tab.rs  render_ssl_tab.rs
crates/db/: Cargo.toml
crates/db/migrations/01-init/: up.sql
crates/db/src/: lib.rs
crates/history/: Cargo.toml
crates/history/src/: empty_state.rs  filter_bar.rs  lib.rs  table.rs
crates/redice/: Cargo.toml
crates/redice/src/: logging.rs  main.rs  workspace.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/theme/: Cargo.toml
crates/theme/src/: lib.rs
crates/theme/themes/: dark.json
crates/ui/: Cargo.toml
crates/ui/src/: icons.rs  lib.rs
src/: db.rs  logging.rs  main.rs  pages.rs  runtime.rs  ui.rs
src/components/: history.rs  home.rs  mod.rs
src/pages/: history.rs  home.rs  mod.rs
src/pages/history/: empty_state.rs  filter_bar.rs  table.rs
src/pages/home/: connection_panel.rs  icon_sidebar.rs  main_content.rs
src/ui/: icons.rs  mod.rs  theme.rs
themes/: dark.json  redice.json
ui/: sidebar-history.html  ui-connected.html  ui-empty.html  ui-mockup.html  ui-new-connection-top-tabs.html  ui-new-connection.html  ui-settings.html  ui-tab-cli.html  ui-tab-keydetail.html  ui-tab-monitor.html  ui-tab-pubsub.html  ui-tab-slowlog.html
