[package]
name = "redice"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
  "time",
  "net",
  "sync",
] }
tokio-rusqlite = "0.7.0"
redis = { version = "1", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
open = "5"
directories = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rusqlite_migration = { version = "2.3.0", features = ["from-directory"] }
include_dir = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
